添加配置文件

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "easy-graph",
-  "version": "1.0.0",
-  "description": "基于React的开源可拖拽图渲染库。",
-  "main": "index.js",
-  "scripts": {
-    "test": "test"
-  },
-  "keywords": [
-    "graph"
-  ],
-  "author": "gray-rabbit",
-  "license": "ISC"
+    "name": "easy-graph",
+    "version": "1.0.0",
+    "description": "基于React的开源可拖拽图渲染库。",
+    "main": "index.js",
+    "scripts": {
+        "test": "test"
+    },
+    "keywords": [
+        "graph"
+    ],
+    "author": "gray-rabbit",
+    "license": "ISC",
+    "dependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    }
 }
