--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "dependencies": {
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
+    },
+    "devDependencies": {
+        "@types/react": "^17.0.41"
     }
 }
