--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "devDependencies": {
         "@babel/core": "^7.17.8",
         "@types/react": "^17.0.41",
-        "babel-loader": "^8.2.3",
-        "babel-preset-env": "^1.7.0",
-        "typescript": "^4.6.2"
+        "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-typescript2": "^0.31.2",
+        "ts-loader": "^9.2.8",
+        "typescript": "^4.6.2",
+        "webpack": "^5.70.0",
+        "webpack-cli": "^4.9.2"
     }
 }
