--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.ts",
     "scripts": {
         "test": "test",
-        "build": "webpack"
+        "build": "rollup -c"
     },
     "keywords": [
         "graph",
@@ -22,8 +22,11 @@
     "devDependencies": {
         "@babel/core": "^7.17.8",
         "@types/react": "^17.0.41",
+        "postcss": "^8.4.12",
         "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-import-css": "^3.0.3",
         "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.31.2",
         "ts-loader": "^9.2.8",
         "typescript": "^4.6.2",
